TAG: qcreports_db-4-3-0-11
DATE: 09/24/2009
STAFF: lec
CHANGES:
1) TR9806/GXD_EarlyEmbPapers.py
	  GXD_FullCodeable.py
	  GXD_FullCode.py
	  GXD_OneGenePapers.py
2) TR9846/GXD_WithdrawnMarker.py
3) TR9858/GXD_AssayInIndexNotInCache.py

TAG: qcreports_db-4-3-0-10
DATE: 08/20/2009
STAFF: lec
CHANGES:
1) TR9770/GXD_Images.py, RECOMB_Images.py
2) TR9770/GXD_LackingImages.py, RECOMB_LackingImages.py

TAG: qcreports_db-4-3-0-9
DATE: 08/19/2009
STAFF: lec
CHANGES:
1) update link to OMIM/OMIMtermcheck.current.rpt

TAG: qcreports_db-4-3-0-8
DATE: 08/11/2009
STAFF: lec
CHANGES:
1) TR9748/ALL_GermlineTransmission.sql

TAG: qcreports_db-4-3-0-7
DATE: 08/06/2009
STAFF: lec
CHANGES:
1) TR9665/GXD_GelBandError.sql

TAG: qcreports_db-4-3-0-6
TAG: qcreports_db-4-3-0-5
TAG: qcreports_db-4-3-0-4
DATE: 07/29/2009
STAFF: lec
CHANGES:
1) ALL_GermlineTransmission.sql

TAG: qcreports_db-4-3-0-3
TAG: qcreports_db-4-3-0-2
TAG: qcreports_db-4-3-0-1
DATE: 07/15/2009
DATE: 07/14/2009
STAFF: lec
CHANGES:
1) merge of TR7493 branch gene trap less filling
2) weekly/ALL_Progress.py
3) added "15. Allele Strain of Origin vs. Parent Cell Line Strain" to Alleles
   this report is generated from allcacheload/allstrain.py

TAG: qcreports_db-4-2-2-3
DATE: 06/09/2009
STAFF: mhall
CHANGES:
1) TR8820/GXD_AssayInIndexNotInCache.py minor formatting changes.

TAG: qcreports_db-4-2-2-2
DATE: 05/28/2009
STAFF: lec
CHANGES:
1) TR9665/GXD_GelBandError.sql

TAG: qcreports_db-tr7493-2
DATE: 07/14/2009
STAFF: lec
CHANGES:
1) TR7493/gene trap less filling

TAG: qcreports_db-tr7493-1
DATE: 05/27/2009
STAFF: lec
CHANGES:
1) TR7493/gene trap less filling

TAG: qcreports_db-tr7493-BP
DATE: 05/27/2009
STAFF: lec
CHANGES:
1) branch tag for TR7493/gene trap less filling

TAG: qcreports_db-4-2-2-1
DATE: 05/26/2009
STAFF: dbm
CHANGES:
1) TR9509; Removed MRK_AllNoGeneModel.py, MRK_ENSEMBLnoGeneModel.py,
           MRK_NCBInoGeneModel.py and MRK_VEGAnoGeneModel.py

TAG: qcreports_db-4-2-1-21
DATE: 05/26/2009
STAFF: lec
CHANGES: