@@ -16,6 +16,12 @@
 #
 # History:
 #
+# lec	10/07/2009
+#	- TR 9876
+#	1) split into two sections:  Genes&Development, Nature Publishing group
+#	2) add column listing the date the image stub was created
+#	3) sort by date of image stub, most recent at the top
+#
 # lec	08/20/2009
 #	- TR 9770; Nat Methods, Nat Protoc
 #
@@ -45,8 +51,8 @@ SPACE = reportlib.SPACE
 TAB = reportlib.TAB
 PAGE = reportlib.PAGE
 
-# journals for year >= 2002
-journals2002 = [
+# journals for Nature Publishing group papers, year >= 2002
+journalsNature = [
 'Biotechnology', 
 'Cell Death Differ', 
 'Nat Biotechnol', 
@@ -63,11 +69,126 @@ journals2002 = [
 'Nat Rev Mol Cell Bio', 
 'Nat Rev Neurosci',
 'Nat Struct Biol', 
-'Nature', 
+'Nature',
 'Oncogene']
 
-# journals for all years
+# journals for all
 journalsAll = ['Genes Dev']
+
+def printNature():
+
+    count = 0
+    fp.write(TAB + 'Nature Publishing group journals where year >= 2002:' + CRT + 2*TAB)
+    for j in journalsNature:
+        fp.write(string.ljust(j, 25) + TAB)
+        count = count + 1
+        if count > 2:
+          fp.write(CRT + 2*TAB)
+          count = 0
+    fp.write(2*CRT)
+
+def printAll():
+
+    count = 0
+    fp.write(TAB + 'Journals for all years:' + CRT + 2*TAB)
+    for j in journalsAll:
+        fp.write(string.ljust(j, 25) + TAB)
+        count = count + 1
+        if count > 2:
+          fp.write(CRT + 2*TAB)
+          count = 0
+    fp.write(2*CRT)
+
+def printFields():
+
+    fp.write(TAB + string.ljust('J#', 12))
+    fp.write(string.ljust('short_citation', 60))
+    fp.write(string.ljust('stub created', 15))
+    fp.write(string.ljust('figure labels', 50) + CRT)
+    fp.write(TAB + string.ljust('--', 12))
+    fp.write(string.ljust('--------------', 60))
+    fp.write(string.ljust('------------', 15))
+    fp.write(string.ljust('-------------', 50) + CRT)
+
+def printResults():
+
+    results = db.sql('''
+	    select distinct r._Refs_key, figureLabel = rtrim(i.figureLabel)
+	    from #refs r, IMG_Image i
+	    where r._Refs_key = i._Refs_key''', 'auto')
+    fLabels = {}
+    for r in results:
+        key = r['_Refs_key']
+        value = r['figureLabel']
+        if not fLabels.has_key(key):
+	    fLabels[key] = []
+        fLabels[key].append(value)
+
+    results = db.sql('''
+	    select r._Refs_key, b.jnumID, b.short_citation, r.creation_date, r.cdate
+	    from #refs r, BIB_All_View b
+	    where r._Refs_key = b._Refs_key 
+	    order by r.creation_date desc, b.jnumID''', 'auto')
+
+    count = 0
+    refprinted = []
+    for r in results:
+        if r['_Refs_key'] not in refprinted:
+            fp.write(TAB + string.ljust(r['jnumID'], 12))
+            fp.write(string.ljust(r['short_citation'], 60))
+	    fp.write(string.ljust(str(r['cdate']), 15))
+            fp.write(string.ljust(string.join(fLabels[r['_Refs_key']], ','), 50) + CRT)
+	    refprinted.append(r['_Refs_key'])
+	    count = count + 1
+
+    fp.write(CRT + 'Total J numbers: ' + str(count) + CRT*3)
+
+    db.sql('drop table #refs', None)
+
+def selectNature():
+
+    #
+    # for journalsNature
+    # select references >= year 2002
+    # for given assays (see below)
+    # with full image stubs
+    #
+
+    db.sql('''select distinct r._Refs_key, r.journal, i.creation_date, cdate = convert(char(10), i.creation_date, 101)
+	    into #refs
+	    from BIB_Refs r, GXD_Assay a, IMG_Image i
+	    where r.journal in ("%s")
+	    and r.year >= 2002
+	    and r._Refs_key = a._Refs_key
+	    and a._AssayType_key in (1,2,3,4,5,6,8,9)
+	    and r._Refs_key = i._Refs_key 
+	    and i._ImageType_key = 1072158
+	    and i.xDim is null
+	    ''' % (string.join(journalsNature, '","')), None)
+
+    db.sql('create index idx1 on #refs(_Refs_key)', None)
+
+def selectOther():
+
+    #
+    # for journalsAll
+    # select references of any year
+    # for given assays (see below)
+    # with full image stubs
+    #
+
+    db.sql('''select distinct r._Refs_key, r.journal, i.creation_date, cdate = convert(char(10), i.creation_date, 101)
+	    into #refs
+	    from BIB_Refs r, GXD_Assay a, IMG_Image i
+	    where r.journal in ("%s")
+	    and r._Refs_key = a._Refs_key
+	    and a._AssayType_key in (1,2,3,4,5,6,8,9)
+	    and r._Refs_key = i._Refs_key 
+	    and i._ImageType_key = 1072158
+	    and i.xDim is null
+	    ''' % (string.join(journalsAll, '","')), None)
+
+    db.sql('create index idx1 on #refs(_Refs_key)', None)
 
 #
 # Main
@@ -75,79 +196,15 @@ journalsAll = ['Genes Dev']
 
 fp = reportlib.init(sys.argv[0], 'Papers Requiring Permissions', outputdir = os.environ['QCOUTPUTDIR'])
 
-count = 0
-fp.write(TAB + 'Journals where year >= 2002:' + CRT + 2*TAB)
-for j in journals2002:
-    fp.write(string.ljust(j, 25) + TAB)
-    count = count + 1
-    if count > 2:
-      fp.write(CRT + 2*TAB)
-      count = 0
-fp.write(2*CRT)
+printNature()
+printFields()
+selectNature()
+printResults()
 
-count = 0
-fp.write(TAB + 'Journals for all years:' + CRT + 2*TAB)
-for j in journalsAll:
-    fp.write(string.ljust(j, 25) + TAB)
-    count = count + 1
-    if count > 2:
-      fp.write(CRT + 2*TAB)
-      count = 0
-fp.write(2*CRT)
-
-fp.write(TAB + string.ljust('J#', 12))
-fp.write(string.ljust('short_citation', 75))
-fp.write(string.ljust('figure labels', 50) + CRT)
-fp.write(TAB + string.ljust('--', 12))
-fp.write(string.ljust('--------------', 75))
-fp.write(string.ljust('-------------', 50) + CRT)
-
-db.sql('''select distinct r._Refs_key, r.journal, a.creation_date 
-	into #refs
-	from BIB_Refs r, GXD_Assay a
-	where r.year >= 2002
-	and r.journal in ("%s")
-	and r._Refs_key = a._Refs_key
-	and a._AssayType_key in (1,2,3,4,5,6,8,9)
-	and exists (select 1 from IMG_Image a where r._Refs_key = a._Refs_key 
-	and a._ImageType_key = 1072158
-	and a.xDim is null)
-	union
-        select distinct r._Refs_key, r.journal, a.creation_date
-	from BIB_Refs r, GXD_Assay a
-	where r.journal in ("%s")
-	and r._Refs_key = a._Refs_key
-	and a._AssayType_key in (1,2,3,4,5,6,8,9)
-	and exists (select 1 from IMG_Image a where r._Refs_key = a._Refs_key 
-	and a._ImageType_key = 1072158
-	and a.xDim is null)
-	''' % (string.join(journals2002, '","'), string.join(journalsAll, '","')), None)
-db.sql('create index idx1 on #refs(_Refs_key)', None)
-
-results = db.sql('''select distinct r._Refs_key, figureLabel = rtrim(i.figureLabel)
-	from #refs r, IMG_Image i
-	where r._Refs_key = i._Refs_key''', 'auto')
-fLabels = {}
-for r in results:
-    key = r['_Refs_key']
-    value = r['figureLabel']
-    if not fLabels.has_key(key):
-	fLabels[key] = []
-    fLabels[key].append(value)
-
-results = db.sql('''select r._Refs_key, b.jnumID, b.short_citation from #refs r, BIB_All_View b
-	where r._Refs_key = b._Refs_key order by r.creation_date, b.jnumID''', 'auto')
-
-count = 0
-refprinted = []
-for r in results:
-    if r['_Refs_key'] not in refprinted:
-        fp.write(TAB + string.ljust(r['jnumID'], 12))
-        fp.write(string.ljust(r['short_citation'], 75))
-        fp.write(string.ljust(string.join(fLabels[r['_Refs_key']], ','), 50) + CRT)
-	refprinted.append(r['_Refs_key'])
-	count = count + 1
-
-fp.write(CRT + 'Total J numbers: ' + str(count) + CRT)
+printAll()
+printFields()
+selectOther()
+printResults()
 
 reportlib.finish_nonps(fp)
+
