@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-3-0-12
+DATE: 10/07/2009
+STAFF: lec
+CHANGES:
+1) TR9876/GXD_LackingImages.py
+
 TAG: qcreports_db-4-3-0-11
 DATE: 09/24/2009
 STAFF: lec
